# ORIGAMI2

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/: action-runtime-contract.json  cargo-license-db.json  release-audit-requirements.txt  release-notes-windows-contract.json  release-notes-windows.md  release-readiness.json  rustsec-allowed-warnings.txt  rustsec-warning-ledger.json
.github/scripts/: bind_release_sbom.mjs  create_reproducible_release_archive.mjs  dependency_policy.mjs  package_formal_release.ps1  package_windows_release.ps1  rehearse_release_candidate.mjs  release_archive_contract.mjs  run_release_dry_run.mjs  smoke_windows_installer.ps1  update_compatibility_contract.mjs  validate_formal_release.mjs  validate_windows_release.ps1  verify_desktop_bundle_csp.mjs  verify_diagnostics_privacy.mjs  verify_formal_release.mjs  (+19 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: applied_pose.rs  beginner_recognition.rs  crease_export.rs  diagnostics.rs  fold_3d_frames_import.rs  fold_technique_file_io.rs  global_flat_foldability.rs  history_settings.rs  instruction_export.rs  lib.rs  main.rs  mesh_animation_export.rs  mesh_export.rs  numeric_expression.rs  project_folder_io.rs  project_persistence.rs  recent_projects.rs  recovery.rs  runtime_update.rs  save_path.rs  stacked_fold_read.rs  stacked_fold_transaction.rs
apps/desktop/src-tauri/src/applied_pose/: static_collision.rs
apps/desktop/src-tauri/src/project_folder_io/: replacement.rs  unix.rs  windows.rs
apps/desktop/src-tauri/tests/: event_schema_corpus.rs
crates/ori-collision/: Cargo.toml
crates/ori-collision/src/: block_composition.rs  cayley.rs  cell_order_transport.rs  certified_path_graph.rs  continuous_layer_transport.rs  continuous_path.rs  effective_cut_static.rs  exact_dyadic_intersection.rs  flat_endpoint_layer_order.rs  general_cell_transport.rs  graph_positive_thickness.rs  hinge_relief.rs  lib.rs  non_flat_cell_transport.rs  stacked_fold_read.rs  static_collision.rs  static_transition_chain.rs  zero_thickness.rs
crates/ori-collision/src/cayley/: containment.rs  positive_thickness.rs  stress_tests.rs
crates/ori-collision/src/cayley/containment/: blocking.rs
crates/ori-collision/src/cayley/positive_thickness/: direct_f_affine_corridor.rs  direct_f_corridor.rs  ef_boundary.rs  exact_e_corridor.rs  exact_prism.rs  shared_hinge_corridor_admission.rs  shared_hinge_solid_classification.rs  shared_hinge_topology_margin.rs
crates/ori-collision/tests/: cell_order_transport.rs  effective_cut_static.rs  flat_endpoint_layer_order.rs  hinge_relief.rs  stacked_fold_read.rs  static_collision.rs  topology_contact_policy_v2_matrix.rs
crates/ori-core/: Cargo.toml
crates/ori-core/src/: annotation_editor.rs  applied_pose.rs  constraint_solver.rs  constraints.rs  cycle_fold_transaction.rs  editor.rs  flat_surface.rs  fold_model_fingerprint.rs  lib.rs  sheet.rs  stacked_fold.rs  topology.rs  validation.rs
crates/ori-core/src/editor/: bulk_intersection_plan.rs  history_persistence.rs
crates/ori-domain/: Cargo.toml
crates/ori-domain/src/: annotations.rs  beginner_candidates.rs  beginner_design.rs  beginner_generation.rs  beginner_generator.rs  beginner_recognition.rs  constraints.rs  element_metadata.rs  layers.rs  lib.rs  underlays.rs
crates/ori-formats/: Cargo.toml
crates/ori-formats/assets/fonts/: FONT-SOURCE.md
crates/ori-formats/examples/: generate_gltf_validator_fixtures.rs
crates/ori-formats/src/: crease_pattern_export.rs  fold.rs  fold_frames.rs  instruction_export.rs  lib.rs  mesh_animation_export.rs  mesh_export.rs  ori2.rs  project_folder.rs  reference_glb.rs  svg.rs
crates/ori-formats/src/crease_pattern_export/: dxf.rs  pdf.rs
crates/ori-formats/src/instruction_export/: font.rs  layout.rs  pdf.rs  svg_zip.rs
crates/ori-instructions/: Cargo.toml
crates/ori-instructions/src/: fold_technique_file.rs  lib.rs  technique_motion.rs
crates/ori-kinematics/: Cargo.toml
crates/ori-kinematics/src/: dyadic_pose_graph.rs  graph.rs  interval.rs  lib.rs  schedule.rs  transform.rs  tree.rs
crates/ori-kinematics/tests/: effective_cut_kinematics.rs  tree_kinematics.rs
crates/ori-numeric/: Cargo.toml
crates/ori-numeric/src/: lib.rs
crates/ori-topology/: Cargo.toml
crates/ori-topology/src/: admission.rs  closed_cut.rs  closed_cut_topology.rs  cut_material_selection.rs  dcel.rs  fold_graph.rs  lib.rs  local_flat_foldability.rs  single_fold.rs
crates/ori-topology/tests/: single_fold.rs
docs/: 3d-mesh-export-contract.md  angle-snap-design.md  audit-assessment-2026-07-18.md  basic-design.md  beginner-custom-target-evidence-2026-07-22.md  canvas-performance-design.md  code-audit-response-2026-07-22.md  code-audit-response-2026-07-23.md  code-review-assessment-2026-07-19.md  collision-classification-coverage-v2.md  collision-contact-policy-v1.json  collision-contact-policy-v2.json  collision-contact-policy-v2.md  collision-contact-policy.md  crease-pattern-export-contract.md  cycle-schedule-limitations.md  direct-f-affine-corridor-design.md  direction-snap-design.md  editor-history-persistence-v1.md  face-extraction-design.md  fold-import-contract.md  fold-technique-file-contract.md  formal-release.md  global-flat-foldability-design.md  gltf-validator-acceptance.md  instruction-export-contract.md  instruction-timeline-design.md  intersection-cluster-design.md  intersection-snap-design.md  length-display-units.md  local-flat-foldability-design.md  macos-quit-protection-design.md  native-applied-pose-design.md  native-file-io-testing.md  numeric-expression-contract.md  numeric-expression-user-input-v1.md  ori2-compatibility-policy.md  parallel-snap-design.md  path-technique-evidence-2026-07-22.md  petal-vertex-relief-blocker.md  (+16 more)
scripts/: audit_instruction_exports.py  run_instruction_export_offline_test.ps1  verify_windows_bundle.ps1
test-support/: dense_grid_cycle.rs  four_bay_cycle.rs  miura_cactus.rs  theta_cycle.rs
(+523 files in other folders)
