[workspace]
members = ["apps/desktop/src-tauri", "crates/ori-domain", "crates/ori-geometry", "crates/ori-topology", "crates/ori-foldability", "crates/ori-instructions", "crates/ori-core", "crates/ori-formats"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/oltotlo79-rgb/ORIGAMI2"

[workspace.dependencies]
num-bigint = "0.4.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
