[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/ori-collision",
    "crates/ori-core",
    "crates/ori-domain",
    "crates/ori-foldability",
    "crates/ori-formats",
    "crates/ori-geometry",
    "crates/ori-instructions",
    "crates/ori-kinematics",
    "crates/ori-numeric",
    "crates/ori-topology",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/oltotlo79-rgb/ORIGAMI2"

[workspace.dependencies]
num-bigint = "=0.4.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
