[package]
name = "ori-collision"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
num-bigint.workspace = true
num-rational = "0.4.2"
num-traits = "0.2.19"
ori-domain = { path = "../ori-domain" }
ori-kinematics = { path = "../ori-kinematics" }
ori-topology = { path = "../ori-topology" }
thiserror.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
