[package]
name = "ori-collision"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
private-petal-e2e = []

[dependencies]
num-bigint.workspace = true
num-integer = "=0.1.46"
num-rational = "=0.4.2"
num-traits = "0.2.19"
ori-domain = { path = "../ori-domain" }
ori-core = { path = "../ori-core" }
ori-foldability = { path = "../ori-foldability" }
ori-kinematics = { path = "../ori-kinematics" }
ori-topology = { path = "../ori-topology" }
sha2 = "0.10.9"
thiserror.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
