[package]
name = "ori-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
num-bigint.workspace = true
ori-domain = { path = "../ori-domain" }
ori-foldability = { path = "../ori-foldability" }
ori-geometry = { path = "../ori-geometry" }
ori-topology = { path = "../ori-topology" }
thiserror.workspace = true
