[package]
name = "ori-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
unicode-normalization.workspace = true
uuid = { workspace = true, features = ["v5"] }
