[package]
name = "ori-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori-domain = { path = "../ori-domain" }
ori-geometry = { path = "../ori-geometry" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
thiserror.workspace = true
zip = { version = "8.6", default-features = false, features = ["deflate-flate2-zlib-rs"] }
