[package]
name = "ori-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori-domain = { path = "../ori-domain" }
ori-geometry = { path = "../ori-geometry" }
ori-instructions = { path = "../ori-instructions" }
ori-topology = { path = "../ori-topology" }
quick-xml = { version = "0.41.0", default-features = false }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
svgtypes = { version = "=0.16.1", default-features = false, features = ["std"] }
thiserror.workspace = true
ttf-parser = "0.25.1"
zip = { version = "8.6", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
# Exercise the feature-unified code path where `FileOptions::default()` uses
# the current clock, so the `.ori2` determinism test detects an implicit timestamp.
zip = { version = "8.6", default-features = false, features = ["time"] }
