[package]
name = "ori-instructions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ori-domain = { path = "../ori-domain" }
ori-kinematics = { path = "../ori-kinematics" }
ori-topology = { path = "../ori-topology" }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
sha2 = "0.10.9"
