[package]
name = "ori-kinematics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libm = { version = "=0.2.16", default-features = false }
ori-domain = { path = "../ori-domain" }
ori-geometry = { path = "../ori-geometry" }
ori-topology = { path = "../ori-topology" }
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
