[package]
name = "ori-kinematics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libm = { version = "=0.2.16", default-features = false }
num-bigint.workspace = true
num-rational = "=0.4.2"
num-traits = "0.2.19"
ori-domain = { path = "../ori-domain" }
ori-geometry = { path = "../ori-geometry" }
ori-topology = { path = "../ori-topology" }
sha2 = "0.10.9"
thiserror.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
