[package]
name = "ori-numeric"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
num-bigint.workspace = true
num-rational = "=0.4.2"
num-traits = "0.2.19"
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
