[package]
name = "ori-topology"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
num-bigint.workspace = true
ori-domain = { path = "../ori-domain" }
ori-geometry = { path = "../ori-geometry" }
serde.workspace = true
sha2 = "0.10.9"
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
