[package]
name = "origami2-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
name = "origami2_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ori-core = { path = "../../../crates/ori-core" }
ori-domain = { path = "../../../crates/ori-domain" }
ori-formats = { path = "../../../crates/ori-formats" }
serde.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
