[package]
name = "origami2-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
name = "origami2_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
num-bigint.workspace = true
ori-collision = { path = "../../../crates/ori-collision" }
ori-core = { path = "../../../crates/ori-core" }
ori-domain = { path = "../../../crates/ori-domain" }
ori-foldability = { path = "../../../crates/ori-foldability" }
ori-formats = { path = "../../../crates/ori-formats" }
ori-instructions = { path = "../../../crates/ori-instructions" }
ori-kinematics = { path = "../../../crates/ori-kinematics" }
ori-topology = { path = "../../../crates/ori-topology" }
ori-numeric = { path = "../../../crates/ori-numeric" }
serde.workspace = true
serde_json.workspace = true
unicode-normalization.workspace = true
sha2 = "0.10.9"
base64 = "0.22"
png = "0.18"
jpeg-decoder = { version = "0.3.2", default-features = false }
zip = { version = "8.6", default-features = false, features = ["deflate-flate2-zlib-rs"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
ori-instructions = { path = "../../../crates/ori-instructions", features = ["private-petal-e2e"] }
